Fix bug with default seperator, Autoquote seperator for read, Remove deprecated methods